--- a/minigpt4/configs/datasets/coco_bbox/refcocog.yaml
+++ b/minigpt4/configs/datasets/coco_bbox/refcocog.yaml
@@ -2,7 +2,7 @@ datasets:
   refcocog:
     data_type: images
     build_info:
-      image_path: /path/to/coco/images
-      ann_path: /path/to/refcoco_annotations
+      image_path: /home/hc/workspace/real_graduate/MiniGPT-v2-chengguan/minigpt_ft_dataset/coco/images
+      ann_path: /home/hc/workspace/real_graduate/MiniGPT-v2-chengguan/minigpt_ft_dataset/refcoco_annotations
       dataset: refcocog
       splitBy: umd
