--- a/minigpt4/configs/datasets/llava/detail.yaml
+++ b/minigpt4/configs/datasets/llava/detail.yaml
@@ -2,5 +2,5 @@ datasets:
   llava_detail:
     data_type: images
     build_info:
-      image_path: /path/to/coco/images
-      ann_path: /path/to/llava/detail_23k.json
+      image_path: /home/hc/workspace/real_graduate/MiniGPT-v2-chengguan/minigpt_ft_dataset/coco/images
+      ann_path: /home/hc/workspace/real_graduate/MiniGPT-v2-chengguan/minigpt_ft_dataset/llava/detail_23k.json
