--- a/minigpt4/configs/datasets/llava/reason.yaml
+++ b/minigpt4/configs/datasets/llava/reason.yaml
@@ -3,5 +3,5 @@ datasets:
   llava_reason:
     data_type: images
     build_info:
-      image_path: /path/to/coco/images
-      ann_path: /path/to/llava/complex_reasoning_77k.json
+      image_path: /home/hc/workspace/real_graduate/MiniGPT-v2-chengguan/minigpt_ft_dataset/coco/images
+      ann_path: /home/hc/workspace/real_graduate/MiniGPT-v2-chengguan/minigpt_ft_dataset/llava/complex_reasoning_77k.json
