--- a/chengguan_config/datasets/refdet_v1.yaml
+++ b/chengguan_config/datasets/refdet_v1.yaml
@@ -2,5 +2,9 @@ datasets:
   refdet_v1:
     data_type: images
     build_info:
-      image_path: /home/hc/workspace/real_graduate/MiniGPT-v2-chengguan/chengguan_dataset/refdet_v2/images
-      ann_path: /home/hc/workspace/real_graduate/MiniGPT-v2-chengguan/chengguan_dataset/refdet_v2/annotations/train.json
+      train:
+        image_path: /home/hc/workspace/real_graduate/MiniGPT-v2-chengguan/chengguan_dataset/refdet_v2/images
+        ann_path: /home/hc/workspace/real_graduate/MiniGPT-v2-chengguan/chengguan_dataset/refdet_v2/annotations/train.json
+      eval:
+        image_path: /home/hc/workspace/real_graduate/MiniGPT-v2-chengguan/chengguan_dataset/refdet_v2/images
+        ann_path: /home/hc/workspace/real_graduate/MiniGPT-v2-chengguan/chengguan_dataset/refdet_v2/annotations/validation.json
