--- a/chengguan_config/datasets/invrefdet.yaml
+++ b/chengguan_config/datasets/invrefdet.yaml
@@ -8,3 +8,6 @@ datasets:
       eval:
         image_path: /home/hc/workspace/real_graduate/MiniGPT-v2-chengguan/chengguan_dataset/refdet_v3/val/images
         ann_path: /home/hc/workspace/real_graduate/MiniGPT-v2-chengguan/chengguan_dataset/refdet_v3/val/annotations.json
+      test:
+        image_path: /home/hc/workspace/real_graduate/MiniGPT-v2-chengguan/chengguan_dataset/refdet_v3/test/images
+        ann_path: /home/hc/workspace/real_graduate/MiniGPT-v2-chengguan/chengguan_dataset/refdet_v3/test/annotations.json
